# application-ram-monitor

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml
appmon/: __init__.py  __main__.py  cgroup.py  desktop.py  gpu.py  grouping.py  metrics.py  network.py  proc.py
appmon/tui/: __init__.py  app.py  formatting.py  monitor_table.py
packaging/aur/: .SRCINFO  PKGBUILD
scripts/: install.sh
tests/: test_cgroup.py  test_formatting.py  test_gpu.py  test_grouping.py  test_network.py
