[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appmon"
version = "0.3.4"
description = "Terminal monitor that aggregates RAM and CPU usage per application on Linux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "application-ram-monitor contributors" }]
keywords = ["linux", "monitor", "ram", "cpu", "tui", "arch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
    "nvidia-ml-py>=12.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
appmon = "appmon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["appmon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
